# vibe-hack-101-project

./: .gitignore  README.md  TODO.md  foundry.toml
ocr_api_prod/: .env.example  README.md  pyproject.toml
ocr_api_prod/app/: __init__.py  main.py
proofpass_package/: .gitignore  BRAND_VOICE.md  DEV_BRIEF.md  README.md  STYLE_GUIDE.md  next.config.ts  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json  tsconfig.typecheck.json
proofpass_package/app/: globals.css  layout.tsx  page.tsx
proofpass_package/app/gateway/: page.tsx
proofpass_package/app/identity/: page.tsx
proofpass_package/app/issued/: page.tsx
proofpass_package/app/ocr-test/: page.tsx
proofpass_package/app/verify/: page.tsx
proofpass_package/components/: kyc-attestation-flow.tsx  proofpass-contract.ts  proofpass-data.ts  proofpass-flow.tsx  proofpass-runtime.ts  proofpass-ui.tsx  proofpass-wallet.ts  theme-preview.tsx
proofpass_package/scripts/: clean-next.cjs  node-localstorage-shim.cjs
script/: ProofPassKycRegistry.s.sol
src/: ProofPassKycRegistry.sol
test/: ProofPassKycRegistry.t.sol
