[project]
name = "proofpass-ocr-api"
version = "0.1.0"
description = "FastAPI OCR helper backed by OpenRouter vision models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "eth-account>=0.13.7,<1.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pillow>=12.2.0,<13.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "zxing-cpp>=3.0.0,<4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
